Pivot to Java 8: rewrite all sources for JDK 1.8 compatibility
- Replace record with final class (EngineConfig)
- Replace text blocks with string concatenation
- Replace switch expressions with if-else/switch-case
- Replace pattern matching instanceof with explicit casts
- Replace var with explicit types
- Replace Opcodes.V21 with Opcodes.V1_8
- Replace Path.of() with Paths.get()
- Replace Files.readString/writeString with readAllBytes/write
- Replace Procyon decompiler with CFR (Java 8 compatible)
- All 15 tests pass, fat JAR builds successfully