@@ -4,54 +4,55 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 
-import java.io.IOException;
+import java.io.*;
 import java.lang.reflect.Type;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
- * Stores obfuscated → deobfuscated name mappings for classes, fields, and methods.
+ * Stores obfuscated to deobfuscated name mappings for classes, fields, and methods.
  * Supports JSON import/export for reuse across runs.
  */
 public class MappingStore {
 
-    private final Map<String, String> classMappings = new LinkedHashMap<>();
-    private final Map<String, String> fieldMappings = new LinkedHashMap<>();   // "owner.name:desc" → newName
-    private final Map<String, String> methodMappings = new LinkedHashMap<>();  // "owner.name+desc" → newName
+    private final Map<String, String> classMappings = new LinkedHashMap<String, String>();
+    private final Map<String, String> fieldMappings = new LinkedHashMap<String, String>();   // "owner.name:desc" -> newName
+    private final Map<String, String> methodMappings = new LinkedHashMap<String, String>();  // "owner.name+desc" -> newName
 
-    // Class mappings
     public void mapClass(String obfuscated, String deobfuscated) {
         classMappings.put(obfuscated, deobfuscated);
     }
 
     public String resolveClass(String name) {
-        return classMappings.getOrDefault(name, name);
+        String mapped = classMappings.get(name);
+        return mapped != null ? mapped : name;
     }
 
     public boolean hasClassMapping(String name) {
         return classMappings.containsKey(name);
     }
 
-    // Field mappings: key = "ownerClass.fieldName:descriptor"
     public void mapField(String owner, String name, String desc, String newName) {
         fieldMappings.put(owner + "." + name + ":" + desc, newName);
     }
 
     public String resolveField(String owner, String name, String desc) {
         String key = owner + "." + name + ":" + desc;
-        return fieldMappings.getOrDefault(key, name);
+        String mapped = fieldMappings.get(key);
+        return mapped != null ? mapped : name;
     }
 
-    // Method mappings: key = "ownerClass.methodName+descriptor"
     public void mapMethod(String owner, String name, String desc, String newName) {
         methodMappings.put(owner + "." + name + "+" + desc, newName);
     }
 
     public String resolveMethod(String owner, String name, String desc) {
         String key = owner + "." + name + "+" + desc;
-        return methodMappings.getOrDefault(key, name);
+        String mapped = methodMappings.get(key);
+        return mapped != null ? mapped : name;
     }
 
     public Map<String, String> classMappings() { return classMappings; }
@@ -63,7 +64,8 @@ public class MappingStore {
      */
     public void loadFromFile(Path path) {
         try {
-            String json = Files.readString(path);
+            byte[] bytes = Files.readAllBytes(path);
+            String json = new String(bytes, StandardCharsets.UTF_8);
             Gson gson = new Gson();
             Type type = new TypeToken<MappingData>() {}.getType();
             MappingData data = gson.fromJson(json, type);
@@ -85,7 +87,8 @@ public class MappingStore {
             data.fields = fieldMappings;
             data.methods = methodMappings;
             Gson gson = new GsonBuilder().setPrettyPrinting().create();
-            Files.writeString(path, gson.toJson(data));
+            String json = gson.toJson(data);
+            Files.write(path, json.getBytes(StandardCharsets.UTF_8));
         } catch (IOException e) {
             throw new RuntimeException("Failed to save mappings to " + path, e);
         }
